Agrega la base del proyecto

--- a/Linq_C#.csproj
+++ b/Linq_C#.csproj
@@ -8,8 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemgGroup>
+  <ItemGroup>
     <Content Include="books.json"/>
-  </ItemgGroup>
+  </ItemGroup>
 
 </Project>
